--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -294,6 +294,7 @@ nav {
 	top: 0;
 	margin-top: 5.5em;
 	margin-right: 42px;
+  display: none;
 }
 #toc {
 	background: #fff;
@@ -421,9 +422,18 @@ div#wrap {
 #content .keytakeaways,
 #content .tryit {
 	padding: 0 3% 2% 3%;
-	margin-bottom: 15px;
+	margin-bottom: 1.5em;
 	border-radius: 4px;
+  background-color: #e1f4ff;
 }
+#content .linkitup {
+  background-color: #fffbe1;
+}
+
+#content .keytakeaways {
+  background-color: #e1e5ff;
+}
+
 #content .bcc-box h3,
 #content .linkitup h3,
 #content .keytakeaways h3,
@@ -461,13 +471,19 @@ div#wrap {
 	right: 2.5em;
 	top: 1.75em;
 }
-#content .bcc-success {
+/*#content .bcc-success,
+#content .linkitup,
+#content .keytakeaways,
+#content .tryit, {
 	background-color: #e1f4ff;
 	margin-bottom: 1.5em;
-}
-/*.bcc-box.bcc-success h3 {
-	background-color: #077fab;
 }*/
+.bcc-box.bcc-success h3,
+.linkitup h3,
+.keytakeaways h3,
+.tryit h3 {
+	background-color: #077fab;
+}
 .bcc-box h3:first-child,
 .linkitup h3:first-child,
 .keytakeaways h3:first-child,
