--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -421,8 +421,8 @@ div#wrap {
 #content .linkitup,
 #content .keytakeaways,
 #content .tryit {
-	padding: 0 3% 2% 3%;
-	margin-bottom: 1.5em;
+	padding: 0 2.6% 2% 2.6%;
+	margin: 1.5em;
 	border-radius: 4px;
   background-color: #e1f4ff;
 }
@@ -433,13 +433,21 @@ div#wrap {
 #content .keytakeaways {
   background-color: #e1e5ff;
 }
-
 #content .bcc-box h3,
 #content .linkitup h3,
 #content .keytakeaways h3,
 #content .tryit h3 {
 	margin-top: 0;
 	text-align: center;
+}
+#content .bcc-box p,
+#content .linkitup p,
+#content .keytakeaways p,
+#content .tryit p {
+  font-size: 0.95em;
+  color: #6f6f6f;
+  padding: 20px 20px 0 10px;
+  margin: -5px 15px 15px 15px;
 }
 #content .h3-styling {
   color: #077fab;
