--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -385,26 +385,33 @@ div#wrap {
 	min-height: 8em !important;
 }
 #content h2 {
-	font-size: 1em;
+	font-size: 1.25em;
 	margin-bottom: 1em;
   text-transform: uppercase;
 }
 #content h3 {
 	font-size: 1em;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	margin-top: 1em;
 	text-align: left;
+  color: #6c64ad;
 }
 #content h4 {
 	font-size: 0.9em;
 	font-weight: 600;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	color: #6c64ad;
 }
 #content h5 {
-	font-size: 0.8em;
+	font-size: 0.7em;
 	font-weight: 400;
-	text-transform: uppercase;
+	text-transform: capitalize;
+	color: #6c64ad;
+}
+#content h6 {
+	font-size: 0.6em;
+	font-weight: 400;
+	text-transform: capitalize;
 	color: #6c64ad;
 }
 #content img {
@@ -439,6 +446,7 @@ div#wrap {
 #content .tryit h3 {
 	margin-top: 0;
 	text-align: center;
+  color: #fff;
 }
 #content .bcc-box p,
 #content .linkitup p,
@@ -632,7 +640,7 @@ ol li li::before, ol li li li::before {
 }
 .edit-course-btn {
   margin: 15px 0 30px 0;
-  height: 24px;
+  height: 34px;
 }
 #edit {
   font-size: 10pt;
