--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -459,25 +459,27 @@ div#wrap {
 }
 
 /*  LICENSES & ATTRIBUTIONS H3/H4 STYLING  */
-#content .h3-styling {
+#content .license-attribution-dropdown {
   color: #077fab;
   font-family: "proxima-nova", sans-serif;
-  font-size: 1.1em;
+  font-size: 0.9em;
   font-weight: 600;
   text-transform: uppercase;
-  text-decoration: underline;
   text-align: left;
   cursor: pointer;
   margin-top: 1em;
   padding: 0;
 }
-#content .h4-styling {
+#content .license-attribution-dropdown-subheading {
   color: #6c64ad;
   font-family: "proxima-nova", sans-serif;
-  font-size: 1em;
+  font-size: 0.8em;
   font-weight: 600;
-  margin-bottom: 12px;
+  margin-bottom: 6px;
   text-transform: uppercase;
+}
+.citation-list {
+  font-size: 0.9em;
 }
 
 .difficulty {
@@ -815,8 +817,9 @@ ol li li::before, ol li li li::before {
 
 /*  IMAGES WITH CAPTIONS  */
 .wp-caption {
-  background: #eee;
+  background: #f5f5f5;
   position: relative;
+  padding: 5px;
 }
 .wp-caption img {
   display: block;
@@ -824,4 +827,5 @@ ol li li::before, ol li li li::before {
 }
 .wp-caption-text {
   line-height: 1.3;
+  margin-bottom: 0;
 }
