--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -422,7 +422,7 @@ div#wrap {
 	margin-left: 1em;
 }
 #content blockquote {
-  margin: 2em 0;
+  margin: 1.5em 0;
 	padding: 2em 2em 2em 4em;
 
 }
@@ -842,4 +842,8 @@ ol li li::before, ol li li li::before {
 .wp-caption-text {
   line-height: 1.3;
   margin-bottom: 0;
+}
+
+.log-wrap a {
+  text-decoration: none;
 }
