--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -58,7 +58,7 @@ ul li {
   opacity: 1;
   transition: .2s ease-in;
 }
-.nav {
+/*.nav {
 	top: 48%;
 }
 .nav span.previous {
@@ -66,7 +66,7 @@ ul li {
 }
 .nav span.next {
 	right: 3em;
-}
+}*/
 .nav-container {
 	background: #077fab;
 	margin-bottom: 0;
@@ -117,17 +117,17 @@ ul li {
 	font-family: "proxima-nova", sans-serif;
 	font-weight: 600;
 	text-transform: none;
-	font-size: 1.1em;
+	font-size: 1.6em;
   color: #fff;
 }
 nav {
-	background: transparent;
 	background: #077fab;
 	box-shadow: none;
 	-o-box-shadow: none;
 	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	position: relative;
+  height: 70px;
 	width: 100%;
 	z-index: 100;
 }
@@ -136,6 +136,7 @@ nav {
   height: 35px;
   background-color: #fafafa;
   border-bottom: 1px solid #6d6d6d;
+  z-index: 50;
 }
 .center-subtext-search {
   max-width: 940px;
@@ -278,17 +279,21 @@ nav {
   line-height: 1.3 !important;
 }
 .book-title {
-  width: 520px;
+  width: 50%;
   margin: 0 auto;
-	padding: 10px 0;
-  font: 1.2em/1.6em "proxima-nova", sans-serif;
-	font-weight: 600;
 	text-align: left;
 }
 .book-title a {
+  font: 1.4em "proxima-nova", sans-serif;
+  font-weight: 400;
   color: #fff;
   text-decoration: none;
   text-transform: none;
+  margin: 50% 0;
+  /*  DO NOT MOVE LAST 3 LINES - CENTERS BOOKTITLE TEXT  */
+  height: 70px;
+  line-height: 70px;
+  white-space: nowrap;
 }
 #sidebar {
 	top: 0;
@@ -717,61 +722,72 @@ ol li li::before, ol li li li::before {
 /*  SUB NAV HEADER/FOOTER  */
 /***************************/
 
-.columns {
-  padding: 0;
-}
-.title-row {
+
+#study-guide-heading {
+  height: 105px;
   position: relative;
-  height: 69px;
-  width: 100%;
-  background-color: #fff;
 }
-.title-row-content, .subheader-content {
+#study-guide-heading-content {
   position: absolute;
   top: 50%;
-  /*margin: 0 100px;*/
+  transform: translate(0, -50%);
 }
-.title-row-content {
-  transform: translateY(-45%);
-}
-.subheader-content {
-  transform: translateY(-50%);
-  display: block;
-  position: absolute;
-  margin: 0 auto;
-}
-.subheader {
+#study-guide-heading-content h1 {
+  font-weight: 400;
   margin: 0;
+}
+#why-it-matters,
+#what-you-know,
+#putting-it-together,
+#quiz {
   height: 160px;
 }
-.content-image {
-  width: 175px;
-  height: 100px;
-  float: left;
-}
-.content-image img {
-  height: 100px;
-  margin: 0 42px;
-  padding: 0;
-}
-.content-description {
-  margin-top: 20px;
-  width: 750px;
-  /*line-height: 2em;*/
-}
 #why-it-matters, #putting-it-together {
-  background-color: #007A7C;
+  background-color: #007a7c;
 }
 #what-you-know {
   background-color: #eee;
 }
-#why-it-matters h2, #why-it-matters p,
-#putting-it-together h2, #putting-it-together p,
-#quiz h2, #quiz p {
-  color: #fff;
-}
 #quiz {
   background-color: #077fab;
+}
+.row {
+  height: 100%;
+}
+.content-image {
+  float: left;
+  height: 130px;
+  width: 180px;
+}
+.content-image img {
+  height: 100px;
+  width: 100px;
+  margin: 0 40px;
+  padding: 0;
+}
+.content-description {
+  position: relative;
+  left: 30px;
+  line-height: 1.2em;
+}
+#why-it-matters .content-description,
+#quiz .content-description {
+  color: #fff;
+}
+.content-description-title {
+  margin: 30px 0 10px 0;
+  font-weight: 400;
+  text-decoration: underline;
+  text-transform: capitalize;
+  font-size: 1.5em;
+  padding: 8px 0 4px 0;
+}
+.content-description-title a {
+  text-transform: capitalize;
+  font-weight: 400;
+}
+.content-description-long {
+  font-size: 14px;
 }
 
 
@@ -780,29 +796,39 @@ ol li li::before, ol li li li::before {
 /**************************/
 
 .chapters {
-  left: 100px;
-  width: 100%;
-  margin: 8px auto 8px 0;
-  box-shadow: 0 1px 10px #a5a5a5;
-  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 6px;
   background-color: #fff;
-  align: left;
-}
-.chapters-container {
-  width: 800px;
 }
 .chapter-content {
-  margin: 30px 20px 20px 0; /* QUESTIONABLE... */
+  min-height: 160px;
+  margin: 30px 0 20px 0;
+  line-height: 1.2em;
+  position: relative;
 }
-.chapter-content .heading {
-  color: #000;
-  margin-bottom: 0.5em;
-  font-size: 1.1em;
-  font-weight: 600;
-  text-transform: capitalize;
-  text-align: left;
+.chapter-content .content-image {
+  position: absolute;
+  height: 100% !important;
+  background: #eee;
+  border-radius: 6px 0 0 6px;
+  margin-left: 15px;
 }
-.chapter-links {
+.chapter-content .content-image img {
+  margin-top: 30px;
+}
+.chapter-content .content-description {
+  position: relative;
+  left: 210px;
+}
+.chapter-content .content-description-title {
+  margin: 0;
+  padding: 30px 0 10px 0;
+  text-decoration: none;
+}
+.chapter-content .content-description-long {
+
+}
+/*.chapter-links {
   border: none;
   border-collapse: separate;
   padding: 0;
@@ -824,7 +850,10 @@ ol li li::before, ol li li li::before {
 }
 .chapter-content h5 {
   line-height: 1.5em;
-}
+}*/
+
+
+
 .license-attribution {
   background: #fafafa;
 }
