update google font url to https

--- a/wp-content/plugins/pressbooks/themes-book/pressbooks-book/style.css
+++ b/wp-content/plugins/pressbooks/themes-book/pressbooks-book/style.css
@@ -14,7 +14,7 @@ Version: 1.4
 *********************/
 
 
-@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
 
 @font-face {
   font-family: 'OpenSansCondensed';
