fix edit link, hide license, and don't cache all meta

--- a/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
@@ -389,6 +389,9 @@ div#wrap {
     margin-bottom: 0.5em;
     margin-top: 1em;
 }
+.license-attribution {
+	display: none;
+}
 .footer table td {
 	padding: 0.5em !important;
 }
