--- a/wp-content/plugins/candela-utility/themes/candela/export/epub/style.css
+++ b/wp-content/plugins/candela-utility/themes/candela/export/epub/style.css
@@ -180,6 +180,9 @@ div.license-attribution{
 	text-align: center;
 	margin-bottom: 1em;
 }
+.license-attribution {
+	display: none;
+}
 
 /* TABLE OF CONTENTS
 ======================= */
