hide prev/next page button in new theme
Also only show edit button when it should be shown

--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -916,7 +916,7 @@ ul.lti-mapping {
   padding-bottom: 35px;
   min-height: 34px;
 }
-#edit {
+.edit-page-btn a {
   font-size: 10pt;
   font-weight: 600;
   color: #26a69a;
