add css that hides the overflow of text if part title is too long and substitutes an ellipsis at the end, and make part title container flexible based on window size

--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -400,10 +400,14 @@ nav {
 	margin: 0 auto;
 }
 .sub-nav-subtext {
+  width: 40%;
   font-size: 14px;
   color: #6d6d6d;
   float: left;
 	padding-left: 30px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .searchform {
   width: 220px;
