--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -499,11 +499,12 @@ p.cc-block {
 	display:none;
 }
 .footer {
+  min-height: 1em;
+  /*height: 2em;*/
   text-align: center;
-  background: #fafafa;
-  padding: 2em;
-  border-top: 1px solid #e1e1e1;
-  margin-top: 3em;
+  background: #fff;
+  margin-top: 2.75em;
+  padding: 1em;
   color: #959595;
   font-family: "proxima-nova", sans-serif;
   font-size: 0.9em;
@@ -528,7 +529,8 @@ p.cc-block {
   padding: 0;
 }
 .lumen-footer-logo {
-  background: #fafafa;
+  width: 120px;
+  background: transparent;
   margin-bottom: -.3em;
   padding: 0;
 	border: none;
@@ -721,6 +723,10 @@ span.small.xhtml {
 }
 div#wrap {
 	min-height: 8em !important;
+  margin-bottom: 0;
+}
+.push {
+  min-height: 2.75em;
 }
 #content h2 {
 	font-size: 1.25em;
