--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -730,6 +730,7 @@ div#wrap {
 	min-height: 8em !important;
   margin-top: 0;
   margin-bottom: 5px;
+  width: 100%;
 }
 #content h1 {
   font-size: 1.5em;
