--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -431,6 +431,14 @@ nav {
   width: 50px;
   font-size: 0.7em;
   vertical-align: middle;
+  background-color: #077fab;
+  color: #fff;
+  border: none;
+  border-radius: 0 2px 2px 0;
+  margin: 0 0 0 -5px;
+}
+.searchform #searchsubmit:hover {
+  background-color: #0897cb;
 }
 
 
