citations text aligned left

--- a/wp-content/plugins/candela-utility/themes/bombadil/export/mpdf/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/export/mpdf/style.css
@@ -662,6 +662,6 @@ p {  /*  <p> and all normal body text: Decour Light, 10pt, line space 13 pt -see
 	text-align: center;
 }
 
-/*.citations {
-	color: red;
-}*/
+.citations {
+text-align: left;
+}
